# hofstadter_butterfly

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  matrix2x2.rs  pi.rs  polynomial.rs  wrapped_num_traits.rs
